# Pico-W-A2DP-Sink

./: CMakeLists.txt  README.md  btstack_config.h  main.c
audio_i2s/: CMakeLists.txt  audio_i2s.c  audio_i2s.h  audio_i2s.pio
bluetooth/: CMakeLists.txt  a2dp.c  a2dp.h  avrcp.c  avrcp.h  bt.c  bt.h  bt_i2s.c  bt_i2s.h  sdp.c  sdp.h
